# inbrief-shared

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  __init__.py  compose.dev.yaml  compose.prod.yaml  core.py  db.py  entities.py  exceptions.py  justfile  logger.py  logging.py  models.py  patterns.py  prompts.py  pyproject.toml  resources.py  routes.py  utils.py
config/: app_conf.cfg  clustering_conf.cfg  parser.cfg  searcher_conf.cfg  settings.json
db/: init.sql
linker/: README.md  pyproject.toml
linker/src/: matcher.py  utils.py
openai_api/: .gitignore  README.md  core.py  pyproject.toml
research/: research.ipynb
scraper/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
scraper/src/: embedders.py  generate_session.py  utils.py
shared/: README.md  db.py  resources.py  utils.py
src/: classifiers.py  clustering.py  config.py  embedders.py  generate_session.py  main.py  matcher.py  metrics.py  models.py  ranking.py  scraper.py  utils.py
src/clustering/: clustering.py
src/searchers/bm25_searcher/: bm25_search.py
src/searchers/elasticsearch_searcher/: config.py  elasticsearch_searcher.py  load_index.py
src/shared/: db.py  entities.py  handlers.py  logger.py  models.py  patterns.py  resources.py  routes.py  utils.py
src/shared/entities/: common.py  embedder.py  scraper.py
src/shared/models/: api.py  client.py  embedder.py  linker.py  scraper.py  settings.py  summarizer.py  supervisor.py
