[project]
name = "shared"
version = "0.1.0"
dependencies = [
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "databases[asyncpg]>=0.9.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
