[project]
name = "inbrief-scraper"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi>=0.110.1",
    "pydantic>=2.6.4",
    "telethon>=1.34.0",
    "asgi-correlation-id>=4.3.1",
    "transformers>=4.39.3",
    "pydantic-settings>=2.2.1",
    "uvicorn>=0.29.0",
    "databases[asyncpg]>=0.9.0",
    "fasttext-wheel>=0.9.2",
    "rb-tocase>=1.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.3.5",
    "pre-commit>=3.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/inbrief_scraper"]
[tool.rye.workspace]
members = ["shared", "openai_api"]
