[project]
name = "openai-api"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "tenacity>=8.2.3",
    "openai>=1.16.2",
    "numpy>=1.26.4",
    "tiktoken>=0.6.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/openai_api"]
